--- a/Checker.html
+++ b/Checker.html
@@ -19,7 +19,7 @@ background-color: black;
 }
 table.checkerboard td {
 height: 40px; width: 40px;
-background-color: red; padding: 0px;
+background-color: rgb(13, 0, 255); padding: 0px;
 }
 </style>
 
